[tool.poetry]
name = "flumine"
version = "0.1.0"
description = ""
authors = ["hire me now plese"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
betfairlightweight = "2.17.3"
tenacity = "^8.2.2"
python-json-logger = "^2.0.7"
requests = "2.28.0"
betconnect = "^0.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
